SERVER-81941: Fix clusterTime handling in ChangeStreamSourceOperator

GitOrigin-RevId: c5759674d8da87dd5e2df84ac94c5d5ba462cdd5